--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-VITE_BACKEND_URL=http://localhost:4000
+# VITE_BACKEND_URL=https://ecomerce-backend-pi.vercel.app
+ VITE_BACKEND_URL=http://localhost:5023
